added dockertest for postgres repository
