# doc/response.go
@@ -41,16 +41,14 @@ type UpdateCatResponse struct {
 type GenericError struct {
 	// The response message
 	// in: body
-	Body ErrorResponseBody `json:"body"`
-}
+	Body struct {
+		// a human readable version of the error
+		// required: true
+		Message string `json:"message"`
 
-type ErrorResponseBody struct {
-	// a human readable version of the error
-	// required: true
-	Message string `json:"message"`
-
-	// Error An optional detailed description of the actual error. Only included if running in developer mode.
-	Error string `json:"error"`
+		// Error An optional detailed description of the actual error. Only included if running in developer mode.
+		Error string `json:"error"`
+	}
 }
 
 // InternalServerError is a general error indicating something went wrong internally.
@@ -58,15 +56,15 @@ type ErrorResponseBody struct {
 // swagger:response internalServerError
 type InternalServerError GenericError
 
-// NotFoundError is returned when the request is invalid and it cannot be processed.
-//
-// swagger:response notFoundError
-type NotFoundError GenericError
-
 // BadRequestError is returned when the request is invalid and it cannot be processed.
 //
 // swagger:response badRequestError
 type BadRequestError GenericError
+
+// UnsupportedMediaTypeError is returned when the request body is invalid media type.
+//
+// swagger:response unsupportedMediaTypeError
+type UnsupportedMediaTypeError GenericError
 
 // A UnauthorizedError is the default error message that is generated by echo JWT middleware.
 //
@@ -74,13 +72,11 @@ type BadRequestError GenericError
 type UnauthorizedError struct {
 	// The response message
 	// in: body
-	Body UnauthorizedErrorBody `json:"body"`
-}
-
-type UnauthorizedErrorBody struct {
-	// a human readable version of the error
-	// required: true
-	Message string `json:"message"`
+	Body struct {
+		// a human readable version of the error
+		// required: true
+		Message string `json:"message"`
+	}
 }
 
 // swagger:parameters UploadCatImage
@@ -106,11 +102,7 @@ type SignUpParam struct {
 type SignUpResponse struct {
 	// The response message
 	// in: body
-	Body SignUpResponseBody `json:"body"`
-}
-
-type SignUpResponseBody struct {
-	Tokens model.Tokens `json:"tokens"`
+	Body model.Tokens `json:"body"`
 }
 
 // swagger:parameters SignIn
@@ -126,18 +118,14 @@ type SignInParam struct {
 type SignInResponse struct {
 	// The response message
 	// in: body
-	Body SignInResponseBody `json:"body"`
-}
-
-type SignInResponseBody struct {
-	Tokens model.Tokens `json:"tokens"`
+	Body model.Tokens `json:"body"`
 }
 
 // swagger:parameters RefreshToken
 type RefreshTokenParam struct {
 	// in:body
 	// required:true
-	Body model.AuthUser `json:"body"`
+	Body model.RefreshToken `json:"body"`
 }
 
 // A RefreshTokenResponse returns a couple of token with user id.
@@ -146,11 +134,7 @@ type RefreshTokenParam struct {
 type RefreshTokenResponse struct {
 	// The response message
 	// in: body
-	Body SignUpResponseBody `json:"body"`
-}
-
-type RefreshTokenResponseBody struct {
-	Tokens model.Tokens `json:"tokens"`
+	Body model.Tokens `json:"body"`
 }
 
 // An OKResponse is returned if the request was successful.
@@ -158,9 +142,7 @@ type RefreshTokenResponseBody struct {
 // swagger:response okResponse
 type OKResponse struct {
 	// in: body
-	Body SuccessResponseBody `json:"body"`
-}
-
-type SuccessResponseBody struct {
-	Message string `json:"message,omitempty"`
+	Body struct {
+		Message string `json:"message,omitempty"`
+	}
 }
