# swagger.yaml
@@ -103,21 +103,6 @@ definitions:
     - password
     type: object
     x-go-package: github.com/malkev1ch/first-task/internal/model
-  ErrorResponseBody:
-    properties:
-      error:
-        description: Error An optional detailed description of the actual error. Only
-          included if running in developer mode.
-        type: string
-        x-go-name: Error
-      message:
-        description: a human readable version of the error
-        type: string
-        x-go-name: Message
-    required:
-    - message
-    type: object
-    x-go-package: github.com/malkev1ch/first-task/doc
   RefreshToken:
     description: RefreshToken struct represents a  refresh token
     properties:
@@ -126,25 +111,6 @@ definitions:
         x-go-name: RefreshToken
     type: object
     x-go-package: github.com/malkev1ch/first-task/internal/model
-  SignInResponseBody:
-    properties:
-      tokens:
-        $ref: '#/definitions/Tokens'
-    type: object
-    x-go-package: github.com/malkev1ch/first-task/doc
-  SignUpResponseBody:
-    properties:
-      tokens:
-        $ref: '#/definitions/Tokens'
-    type: object
-    x-go-package: github.com/malkev1ch/first-task/doc
-  SuccessResponseBody:
-    properties:
-      message:
-        type: string
-        x-go-name: Message
-    type: object
-    x-go-package: github.com/malkev1ch/first-task/doc
   Tokens:
     description: Tokens struct represents a couple of token
     properties:
@@ -156,16 +122,6 @@ definitions:
         x-go-name: RefreshToken
     type: object
     x-go-package: github.com/malkev1ch/first-task/internal/model
-  UnauthorizedErrorBody:
-    properties:
-      message:
-        description: a human readable version of the error
-        type: string
-        x-go-name: Message
-    required:
-    - message
-    type: object
-    x-go-package: github.com/malkev1ch/first-task/doc
   UpdateCat:
     description: UpdateCat is the struct for update a cat
     properties:
@@ -206,13 +162,15 @@ paths:
         name: body
         required: true
         schema:
-          $ref: '#/definitions/AuthUser'
+          $ref: '#/definitions/RefreshToken'
         x-go-name: Body
       responses:
         "200":
           $ref: '#/responses/refreshTokenResponse'
         "400":
           $ref: '#/responses/badRequestError'
+        "415":
+          $ref: '#/responses/unsupportedMediaTypeError'
         "500":
           $ref: '#/responses/internalServerError'
       summary: Refresh a couple tokens used refresh token
@@ -234,6 +192,8 @@ paths:
           $ref: '#/responses/signInResponse'
         "400":
           $ref: '#/responses/badRequestError'
+        "415":
+          $ref: '#/responses/unsupportedMediaTypeError'
         "500":
           $ref: '#/responses/internalServerError'
       summary: Authorisation process for existed user
@@ -255,6 +215,8 @@ paths:
           $ref: '#/responses/signUpResponse'
         "400":
           $ref: '#/responses/badRequestError'
+        "415":
+          $ref: '#/responses/unsupportedMediaTypeError'
         "500":
           $ref: '#/responses/internalServerError'
       summary: Registration process for new user
@@ -278,6 +240,8 @@ paths:
           $ref: '#/responses/badRequestError'
         "401":
           $ref: '#/responses/unauthorizedError'
+        "415":
+          $ref: '#/responses/unsupportedMediaTypeError'
         "500":
           $ref: '#/responses/internalServerError'
       security:
@@ -343,6 +307,8 @@ paths:
           $ref: '#/responses/badRequestError'
         "401":
           $ref: '#/responses/unauthorizedError'
+        "415":
+          $ref: '#/responses/unsupportedMediaTypeError'
         "500":
           $ref: '#/responses/internalServerError'
       security:
@@ -366,8 +332,6 @@ paths:
       responses:
         "200":
           $ref: '#/responses/okResponse'
-        "500":
-          $ref: '#/responses/internalServerError'
       security:
       - AdminAuth: []
       summary: Get cats image.
@@ -395,6 +359,8 @@ paths:
           $ref: '#/responses/badRequestError'
         "401":
           $ref: '#/responses/unauthorizedError'
+        "415":
+          $ref: '#/responses/unsupportedMediaTypeError'
         "500":
           $ref: '#/responses/internalServerError'
       security:
@@ -409,13 +375,37 @@ responses:
     description: BadRequestError is returned when the request is invalid and it cannot
       be processed.
     schema:
-      $ref: '#/definitions/ErrorResponseBody'
+      properties:
+        error:
+          description: Error An optional detailed description of the actual error.
+            Only included if running in developer mode.
+          type: string
+          x-go-name: Error
+        message:
+          description: a human readable version of the error
+          type: string
+          x-go-name: Message
+      required:
+      - message
+      type: object
   genericError:
     description: |-
       A GenericError is the default error message that is generated.
       For certain status codes there are more appropriate error structures.
     schema:
-      $ref: '#/definitions/ErrorResponseBody'
+      properties:
+        error:
+          description: Error An optional detailed description of the actual error.
+            Only included if running in developer mode.
+          type: string
+          x-go-name: Error
+        message:
+          description: a human readable version of the error
+          type: string
+          x-go-name: Message
+      required:
+      - message
+      type: object
   getCatResponse:
     description: ""
     schema:
@@ -424,33 +414,68 @@ responses:
     description: InternalServerError is a general error indicating something went
       wrong internally.
     schema:
-      $ref: '#/definitions/ErrorResponseBody'
-  notFoundError:
-    description: NotFoundError is returned when the request is invalid and it cannot
-      be processed.
-    schema:
-      $ref: '#/definitions/ErrorResponseBody'
+      properties:
+        error:
+          description: Error An optional detailed description of the actual error.
+            Only included if running in developer mode.
+          type: string
+          x-go-name: Error
+        message:
+          description: a human readable version of the error
+          type: string
+          x-go-name: Message
+      required:
+      - message
+      type: object
   okResponse:
     description: An OKResponse is returned if the request was successful.
     schema:
-      $ref: '#/definitions/SuccessResponseBody'
+      properties:
+        message:
+          type: string
+          x-go-name: Message
+      type: object
   refreshTokenResponse:
     description: A RefreshTokenResponse returns a couple of token with user id.
     schema:
-      $ref: '#/definitions/SignUpResponseBody'
+      $ref: '#/definitions/Tokens'
   signInResponse:
     description: A SignInResponse returns a couple of token with user id.
     schema:
-      $ref: '#/definitions/SignInResponseBody'
+      $ref: '#/definitions/Tokens'
   signUpResponse:
     description: A SignUpResponse returns a couple of token with user id.
     schema:
-      $ref: '#/definitions/SignUpResponseBody'
+      $ref: '#/definitions/Tokens'
   unauthorizedError:
     description: A UnauthorizedError is the default error message that is generated
       by echo JWT middleware.
     schema:
-      $ref: '#/definitions/UnauthorizedErrorBody'
+      properties:
+        message:
+          description: a human readable version of the error
+          type: string
+          x-go-name: Message
+      required:
+      - message
+      type: object
+  unsupportedMediaTypeError:
+    description: UnsupportedMediaTypeError is returned when the request body is invalid
+      media type.
+    schema:
+      properties:
+        error:
+          description: Error An optional detailed description of the actual error.
+            Only included if running in developer mode.
+          type: string
+          x-go-name: Error
+        message:
+          description: a human readable version of the error
+          type: string
+          x-go-name: Message
+      required:
+      - message
+      type: object
   updateCatResponse:
     description: ""
     schema:
